2007-05-16  Denis Washington  <denisw@svn.nome.org>

	* appearance-desktop.c: (desktop_init): Minor code cleanup.

2007-05-16  Denis Washington  <denisw@svn.nome.org>

	* appearance-desktop.c: (desktop_init): re-enable drag-and-drop for the
	wallpaper list.

2007-05-14  Jens Granseuer  <jensgr@gmx.net>

	* appearance.glade: fix button order, remove redundant receives_default,
	don't mark stock labels translatable, and other minor cleanups

2007-05-13  Thomas Wood  <thos@gnome.org>

	* appearance-style.c: (prepare_combo): Connect up colour scheme monitor. Hide
	window on delete, rather than destroy. Add an item to the theme lists if the
	current theme is not present already.
	* appearance-themes.c: (theme_custom_cb): Add missing #include. Moved some
	code to appearance-style.c

2007-05-13  Thomas Wood  <thos@gnome.org>

	* appearance-style.c: (prepare_combo): Sort the items in the theme lists

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_thumbnail_func): unref the thumbnail when
	we're done with it

2007-05-13  Thomas Wood  <thos@gnome.org>

	* appearance-themes.c: (theme_thumbnail_func): Don't free data we don't own.
	Prevents crash when changing themes.

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init), (theme_thumbnail_generate),
	(theme_thumbnail_func): fix asynchronous thumbnail generation

2007-05-13  Thomas Wood  <thos@gnome.org>

	* appearance-style.c: Add colour scheme functions

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance.glade: fix duplicate mnemonic

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): refix button name, too

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): fix gcc 2 build again (bad thos)

2007-05-13  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (appearance_window_response):
	* appearance.glade: use predefined GTK constants for reponse ids
