@@ -1,3 +1,10 @@
+2007-05-16  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-style.c: (prepare_combo), (find_string_in_model),
+	(conv_to_widget_cb), (conv_from_widget_cb),
+	(update_color_buttons_from_string), (color_button_clicked_cb):
+	minor cleanup and getting rid of unnecessary casts
+
 2007-05-16  Denis Washington  <denisw@svn.nome.org>
 
 	* appearance-desktop.c: (desktop_init): Minor code cleanup.
